@@ -1,0 +1,11 @@
+<html>
+  <body>
+    <h1>Alfredo, Java Http SPNEGO Documentation Sets</h1>
+
+    <ul>
+        <li><a href="./0.1.1/index.html">Alfredo 0.1.1</a> (latest)</li>
+        <li><a href="./0.1.0/index.html">Alfredo 0.1.0</a></li>
+    </ul>
+
+  </body>
+</html>
