@@ -1,0 +1,8 @@
+<html>
+    <head>
+        <meta http-equiv="refresh" content="0;url=./docs/latest/index.html">
+    </head>
+    <body>
+        <a href="./docs/latest/index.html">Alfredo latest documentation</a>
+    </body>
+</html>
